# amixtureofmusings

./: .gitignore  .htaccess  README.md  Site.hs  amixtureofmusings.cabal  cabal.sandbox.config
Site/: Archive.hs  Configuration.hs  Index.hs  Meta.hs  Pagination.hs  Pandoc.hs
css/: style.css
posts/: 2012-08-12-spqr.md  2012-10-07-rosa-rosa-rosam.md  2012-11-28-carpe-diem.md  2012-12-07-tu-quoque.md  2016-01-23-hello.md  2016-01-24-getting-started-with-haskell.md  2016-02-13-sums-products-and-swift.md  2016-05-19-associated-types-and-haskell.md  2016-11-01-apple-professionalism-and-pro-macbooks.md  2016-11-09-it-wasnt-the-poor-it-was-the-jobs-stupid.md  2016-11-22-gently-poached-professionals.md  2016-16-01-on-the-quality-of-quality.md  2017-02-02-how-apple-lost-its-scientists.md
scripts/: echo.js
server/: setup.sh
templates/: archive.html  bottom.html  post.html  tag.html  top.html
