name:                amixtureofmusings
synopsis:            My personal Hakyll site, based on Ruud van Asseldonk's own
homepage:            http://amixtureofmusings.com
license:             GPL
license-file:        LICENCE
author:              Bryan Feeney
maintainer:          bryan@amixtureofmusings.com
copyright:           Bryan Feeney
category:            Web
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: https://github.com/budgefeeney/amixtureofmusings.git

executable site
  main-is:             Site.hs
  hs-source-dirs:      .
  ghc-options:         -Wall -fwarn-tabs -threaded
  default-language:    Haskell2010

  build-depends: base       >= 4.7      && < 4.9
               , hakyll     >= 4.7.2.2  && < 4.8
               , pandoc     >= 1.15.0.6 && < 1.16
               , old-locale >= 1.0.0.5  && < 1.1
               , time       >= 1.5.0.0  && < 1.6
               , containers >= 0.5.0.0  && < 0.6
               , filepath   >= 1.3.0.1  && < 1.4
               , hjsmin     >= 0.1.5.0  && < 0.1.6
               , bytestring >= 0.10.6.0 && < 0.10.7
